# GoIt_Web_HW12

./: README.md  main.py  pyproject.toml
alembic/: env.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py
utils/: generate_fake_data.py
